--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -1,4 +1,4 @@
-\section*{The Transcendental Aesthetic}
+\section{The Transcendental Aesthetic}
 Our expedition begins with the \emph{transcendental aesthetics} -- that philosophical trailhead, which separates the orderly boulevards of physics from the uncharted wilderness of metaphysics. For what better way there is to explore beyond the physical -- μετὰ τὰ φυσικά -- than by starting with the very foundation of our means of physical perception? Indeed through Kant's introductory division of knowledge as \emph{a priori} and \emph{a posteriori}, we are already driven to aesthetics, as it is the very means in which we know things \emph{a posteriori}.\footnote{A priori knowledge comes \emph{prior} to experience, lit. `from earlier.' A posteriori knowledge comes \emph{posterior} to experience, lit. `from later.'} The faculty of sensibility is shown to us as a means in which we (i.e. the subject, the reasoning human), have the power to intuit \emph{sensations}, which are presented to us by objects that are external to us. The study of sensations, sensibility, and the intuitions which we yield is the science of aesthetics. And it is from this springboard of aesthetics, where Kant begins his Copernican leap.
 
 For we ask ourselves the question: "can there be any a priori knowledge?" To which Kant responds with the demonstration that: although cognitions are composed of concepts which are in reference to objects\footnote{Cognitions arise from the union of understanding with sensibility. Kant explores this in further detail starting at the transcendental analytic.}, all concepts by necessity do not directly refer to their underlying object, but rather only to a sensible \emph{intuition}.\footnote{Kant defines intuition in part, as a direct presentation of an object. This is in contrast to concepts, which are only presentations of intuitions.} However, our faculty of sensibility is never an active one. We never reach out and `grasp' the objects that we wish to sense with some sort of sensory ectoplasm. Rather, the faculty of sensibility is entirely passive -- it is solely our capacity for the \emph{receptivity} of sensation, our ability to be \emph{affected} by objects that are external to us:
@@ -66,7 +66,7 @@ Ultimately, as a work of metaphysical knowledge, the transcendental aesthetics i
 \noindent
 We will not make him wait.
 
-\section*{The Transcendental Logic}
+\section{The Transcendental Logic}
 As the faculty of sensibility deals with sensations, the faculty of understanding deals with concepts. Sensibility without understanding is only reaction, while understanding without sensation is but nothing but computation. It is the union of both sensibility and understanding which yields cognition, that fruit of the mind so characteristic of the human animal. As the science of understanding is named logic, Kant brings us to this aptly named summit of the \emph{transcendental logic}. The ascent takes place in two steps. We first acknowledge that the characteristic nature of any concept is that of \emph{function}: "the unity of the act of arranging various presentations under one common presentation" \autocite[B93]{hackett}. Given a raw and unorganised manifold of intuitive presentations, the functional process is one in which such a manifold is unified under a singular concept. That is how a whiff of asphalt, the roar of an engine, and the sparkle of sun-shined chrome all combine to form the singular concept of `race car.'
 
 But yet all such unity is also difference -- for every way in which various presentations are combined, we also perform the negative act of excluding other, unrelated presentations. Only in such a manner do our concepts have any order. This means that concepts are also \emph{judgements} -- acts of discernment and differentiation. Thus lies the basis step of Kant's inductive proof.\footnote{A mathematical analogy. Inductive proofs are completed in two steps, a \emph{basis} step, and an \emph{inductive} step.} As all acts of understanding are concepts, and all concepts judgement\ldots\ therefore all understanding is judgement. "Now since all acts of the understanding can be reduced to judgments, the understanding as such can be presented as a power of judgment" \autocite[B94]{hackett}. This reductive method in which we reduce the problem of finding the a prioriae of concepts to that of judgements is an indispensable one -- as a complete, transcendental analysis of the different modes of judgement is a far easier task, than the analysis of infinite unbounded concepts. We are able to start our analysis by drawing upon the prior scholarship of mundane logic, much like beginning a difficult ascent from a pre-established base camp.
@@ -91,12 +91,16 @@ Using the four logical judgements (or the `logical function in judgements', as p
 \noindent
 These twelve categories which are given to us from the faculty of understanding serve as the same transcendental foundation for conception, as the a priori forms of space and time relate to intuition. Having met these elements which compose the second part of the transcendental doctrine of elements, we are now once again left to ask of their utility. "What do these categories tell us about metaphysics? Are space, time, and the categories sufficient grounds for a complete metaphysical foundation?" The answer to this question is a nuanced one. For the transcendental elements of space, time, and category, are still insufficient in isolation. As with chemical elements, they are inert in their pure, transcendentally isolated state. They are the mere feedstock of reactions, which yield the dizzying chemistry that is cognition. For as we have hinted at throughout our journey, it is the union of intuition and concept which leads to cognition.
 
-\section*{The Union of Sensibility and Understanding}
+\clearpage
+
+\section{The Union of Sensibility and Understanding}
 
 This union is conceived of originally as a mundane\footnote{As opposed to transcendental.} one. For it seems that the imposition of a sensible intuition upon understanding leads by it's very nature to an \emph{empirical concept}. That is, a cognition which refers to an object of intuition. This would make this marriage a metaphysically barren one, for such empirical cognitions are fundamentally \emph{objective}, and hence contingent -- there is no space for a priori knowledge here. There can be no morganatic marriage\footnote{A marriage between persons of unequal social rank, e.g. Archduke Franz Ferdinand and Sophie Chotek.} in which we can salvage the union -- for the nature of a category is to bring differing contents into synthesis, and the pure element of intuition are by their definition, contentless. Our exploration of the transcendental landscape would end by necessity, at this insurmountable cliff. This appears to be the case, at least to the untrained eyes of a visitor. However, Kant is able to solve this seemingly impossible unity, through an act of transcendental clarity.
 
 \noindent
 Recall that empirical concepts do not refer to singular, individual intuitions -- but rather, they refer to manifolds of intuition, as exemplified by the earlier `race car' example. These manifolds of intuition, which we talk about in the transcendental sense (i.e abstracted away from their content) still contain the a priori forms of space and time, as these are the necessary conditions to intuition. The existence of these a priori manifolds, which are not experience, but only the possibility of experience\footnote{Kant sometimes uses the word presentation, which is a more general form that also encompasses non-intuitive sources.} (as they contain the formal a prioriae of space and time) -- yields a transcendental manifold which is capable of union with the categories. But what manner of a manifold is this? An abstract and unconcerned manifold\footnote{A manifold that does not contain an experiential subject. I have not explained this distinction yet, but it will become clear in due course.} of possible experience can never be united in synthesis with the categories of pure understanding. Categories are just the a priori forms of judgements, e.g. the form of $((P \lor Q) \land \neg P) \to Q$\footnote{Propositional notation for a disjunctive judgement.}. Even though the intuitive manifold provides us with the propositional terms $P, Q$ (to extend the propositional logic metaphor), and the categories provide us with all the brackets and squiggly signs; the ultimate logical implication (denoted by the symbol `$\to$') is found in neither. Hence, with a simply unconcerned manifold, there is can be no union, and hence no cognition.
+
+\subsection{The Synthetic Unity of Apperception}
 
 This leads us to what is perhaps \emph{the} most thought-provoking idea in Kant's entire \emph{Critique of Pure Reason}, which is the \emph{synthetic unity of apperception}. This synthetic unity of apperception is the unifying act which is capable of bringing intuition together with concepts, yielding cognition. It is the `$\to$' symbol of every judgement. "This is what the little relational word \emph{is} in judgements intends [to indicate], in order to distinguish the objective unity of given presentations [the manifold] from the subjective one" \autocite[B142]{hackett} Kant leads us on, explaining:
 
@@ -111,7 +115,10 @@ This leads us to what is perhaps \emph{the} most thought-provoking idea in Kant'
 \noindent
 Our guide goes on to elaborate on the offspring of such a union, which draw their resemblance from space (corresponding to the outer sense) and time (corresponding to the inner sense), in sections entitled \emph{On the Synthesis of Apprehension in Intuition}, and the \emph{On the Synthesis of Reproduction in Imagination}. However these discussions are merely the procedural lemmae of his transcendental analytic, contingent on the synthetic unity of apperception, and we will not elaborate upon them here. Instead we will spend the rest of our time examining the synthetic unity of apperception, this unifying force which marries sensibility and understanding.
 
-\section*{The Synthetic Unity of Apperception}
+\clearpage
+
+\section{The Element of Cognition}
+
 What makes the synthetic unity of apperception so essential to the process of cognition? Kant canonicalises it as the basis for the possibility of understanding in respect to intuition. His presentation is as follows:
 
 \begin{enumerate}
@@ -161,7 +168,7 @@ This transcendental process, in which the presence of the subject (in the form o
 \noindent
 Thus concludes Kant's treatment synthetic unity of apperception, the only means in which cognition (including objective cognition) can arise. It is the synthesising process of the transcendental elements of sensibility (aesthetics) and understanding (logic), that is only possible "through the necessary reference of the manifold of intuition to the one [self]" \autocite[B140]{hackett}.
 
-\section*{The Kantian Theory of Mind}
+\section{The Kantian Theory of Mind}
 We are now at the summit. The rarefied atmosphere of these transcendental heights have melted away all contingency. These transcendental elements, like the rays of an ascendent sun, shine brilliantly upon our visage, unobstructed by the smog and haze of a posteriori pollution. Our journey was a difficult ascent, one which leaves us with a breathless countenance -- weary from the exertions of our guide's transcendental analytic. And speaking of which \ldots\ where \emph{is} our guide? Look up and turn around! -- but alas, he's nowhere to be seen. We're left alone, with these precepts, and only the ghost of a smile as our transcendental Virgil leaves us. There are further peaks, and farther ranges\footnote{The transcendental dialectic in particular, forms the bulk of Kant's remaining treatise -- but it is only an exposition of the consequences of the analytic. We will only reference it's findings.} -- but none matter to us now, other than the view which is ahead. It is now time to contemplate.
 
 % Talk about the following topics:
@@ -187,7 +194,7 @@ Subscribing to such a gentle `plausible thesis' (even though such concessions to
 \noindent
 For consider the following hypothesis (this paragraph takes the form of a proof via \emph{reductio}). Let there be given a \emph{finite}, thinking being -- those a priori forms of intuition consist not of space nor time. Instead, it is capable of fulfilling all the sensory precepts of an objective intuition without said limitation (i.e. it is not simply insensate). Let it be further granted that such a creature is fully capable of the synthetic unity of apperception, viz. it is fully self-aware. What manner of a creature is this? It is a Flatlandian creature, the solipsistic Monarch of Pointland, a denizen of Edwin Abbott's novella.\footnote{In the novel \emph{Flatland: A Romance of Many Dimensions}, the protagonist (a Square) lives in a 2-dimensional world. During the course of their adventures, they ultimately visit `Pointland' -- inhabited by a single Point, who perceives all others as thoughts originating in his own mind.} Sensate, but yet neither in space nor time, such a creature perceives all sensation as thoughts originating in his own mind. The lack of a spatial intuition by necessity abolishes the \emph{outer sense}, which makes all objective perception a part of the self. Likewise, the lack of a temporal intuition by necessity abolishes the inner sense -- as well as to make all occurrences simultaneous, and concurrent. Such a creature -- who exists as it's existence has been granted -- is by it's very nature is not a \emph{finite} thinking being. To perceive all as a part of the self, separated neither by distance, nor by time -- is to be an infinite, eternal being. Thus completes the arc of this proof via \emph{reductio}, and the demonstration is complete. The proposition is that all finite thinking beings must cognise through the a priori forms of space, and time.
 
-\section*{The Limitations of Rational Metaphysics}
+\section{The Limitations of Rational Metaphysics}
 % The objective/subjective nature of the empirical sciences
 It is clear now that the cognitive act defines and constrains by necessity, the very boundaries of what the cognitive agent (i.e. the knowing being) can know. While we are unable to generate any meaningful knowledge about the \emph{`thing-in-itself'} (the phrase which Kant uses to refer to objects outside of the intuitive forms), Kant demonstrates quite consistently throughout the \emph{Critique} that our knowledge is still empirical. Indeed, it is his very thesis that the broad applicability of mathematics to the natural world is due to his very transcendental construction. The gist of his argument can be found summarised in his \emph{Prolegomena to Any Future Metaphysics}:
 
@@ -206,10 +213,11 @@ These dialectical illusions all share a common form, which is an eventual proof 
 \noindent
 The Kantian argument lies in the seemingly unreconcilable infinitude of arguments, supporting each thesis and antithesis -- always non-contradictory, but yet never true. The application of reason to metaphysics seems to open an infinite maw of endless dialectic, which leaves us never able to apodeictically solve the questions relating to experience, being, soul-hood, and God. It is this infinitude which denies certainty, and the denial of certainty which is the root of reason's `crime.' Here for once, I \emph{categorically reject Kant's thesis.} I argue for an alternative perspective, one which vindicates reason in it's metaphysical utility. I accept the self-consistent infinitude of pure reason in metaphysics, and deign to restore it back to it's place of honour.
 
+\subsection{The Parable of the Suicidal Mathematician}
+
 I present the body of my counterargument in the form of a parable\footnote{An Aesopic fable with animal characters was rejected upon editorial feedback.}, a tale with the name of \emph{The Suicidal Mathematician.}
 
 \begin{quote}
-  \subsubsection*{The Parable of the Suicidal Mathematician}
   Once upon a time there was a young \textsc{Mathematician}, whose eyes were bright with spark and promise. One day, they sits in the class of a visiting \textsc{Professor}, a foreigner who presents a lecture on \emph{Gödel's Theorems of Incompleteness}.\footnote{Two theorems published by Kurt Gödel in 1931, which proves the incompleteness of all formal systems, including that of mathematics.} In the lecture hall, the \textsc{Professor} explains:
 
   "Using mathematics of the greatest rigour and exactitude, we have apodeictically proved that: \emph{there is no formal axiomatic system that can prove it's own consistency}. Any such proof will depend on \emph{axioms outside of the system itself}."
