--- a/latex/sections/endpage.tex
+++ b/latex/sections/endpage.tex
@@ -1,5 +1,5 @@
 % Uncomment for bibliography using biblatex (see includes/formatting.tex)
-\section*{Bibliography}
+\section{Bibliography}
 All quotations from Immanel Kant's \emph{Critique of Pure Reason} are sourced from the 1996 Werner S. Pluhar translation issued by Hackett Publishing. Citation line numbers refer to the Second (i.e. `B') edition of the \emph{Critique}, as per the \emph{Akademie} manuscript.
 % Print every citation in citations.bib, even if unused by \autocite
 \nocite{*}
