--- a/latex/sections/faculties.tex
+++ b/latex/sections/faculties.tex
@@ -1,4 +1,4 @@
-\section*{The Three Faculties: Sensability, Understanding, Reason}
+\section{The Three Faculties: Sensability, Understanding, Reason}
 Before tackling any particular section of Kant's Critique, it is helpful to have an idea of the general structure of Kant's thesis. Kant implicitly divides the human condition\footnote{This is my term, to which I use to refer to the general state of a human being as a thinking, experiential creature.} into three \emph{faculties}, each one having an associated science. These faculties are:
 
 \begin{enumerate}
