--- a/latex/sections/conclusion.tex
+++ b/latex/sections/conclusion.tex
@@ -1,7 +1,7 @@
 \section{Conclusion}
-The sun is setting now, and the thin, transcendental atmosphere of these peaks howl with a cold wind. As the last rays of the sun give away to the glow of an ascendent moon, the full scope of this Kantian island comes into view. It's rather befitting of a \emph{Spirit-Seer},\footnote{\emph{Dreams of a Spirit-Seer}, an early work by Kant which predates the \emph{Critique} by several decades.} for the contours of their island to resolve best only through moonlight. We have travelled far in this journey, and although our guide is gone -- the way back home is as clear and as `apodeictically' certain, as a Kantian demonstration. In our journey in this land of metaphysics, we traversed the slopes of the transcendental aesthetic, finding out the a priori forms behind all sensible intuition. These forms serve as the necessary prerequisite for mathematical intuition, even if they do not extend as much to mathematical cognition. We are then lead to the even higher mountain, of a transcendental logic, in which we examine the origin of categories, that a priori element of pure understanding. The ascent is a difficult one, an act of technical mountaineering assisted by a leap from concepts to judgement, and from judgement to category. Even so, it is not a leap unscathed, for the completeness of Kant's table of judgements is still yet perfect -- even though it suffices for our path. Well above the snow line now, we finally prepare to summit -- reaching the ultimate pinnacle of the synthetic unity of apperception. It is here in which we finally catch our breath, and delve into the nature of self-awareness, finite beings, and the nature of cognitive agents.
+The sun is setting now, and the thin, transcendental atmosphere of these peaks howl with a cold wind. As the last rays of the sun give away to the glow of an ascendant moon, the full scope of this Kantian island comes into view. It's rather befitting of a \emph{Spirit-Seer},\footnote{\emph{Dreams of a Spirit-Seer}, an early work by Kant which predates the \emph{Critique} by several decades.} for the contours of their island to resolve best only through moonlight. We have travelled far in this journey, and although our guide is gone --- the way back home is as clear and as \enquote*{apodeictically} certain, as a Kantian demonstration. In our journey in this land of metaphysics, we traversed the slopes of the transcendental aesthetic, finding out the a priori forms behind all sensible intuition. These forms serve as the necessary prerequisite for mathematical intuition, even if they do not extend as much to mathematical cognition. We are then lead to the even higher mountain, of a transcendental logic, in which we examine the origin of categories, that a priori element of pure understanding. The ascent is a difficult one, an act of technical mountaineering assisted by a leap from concepts to judgement, and from judgement to category. Even so, it is not a leap unscathed, for the completeness of Kant's table of judgements is still yet perfect --- even though it suffices for our path. Well above the snow line now, we finally prepare to summit --- reaching the ultimate pinnacle of the synthetic unity of apperception. It is here in which we finally catch our breath, and delve into the nature of self-awareness, finite beings, and the nature of cognitive agents.
 
-As the moonlight illuminates the on the island's shore, we are reminded once more of the words from our departed guide: "It is the land of truth, and is surrounded by a vast and stormy ocean", he echoes. "Where illusion properly resides and many fog banks and much fast-melting ice feign new-found lands" \autocite[B295]{hackett} But we only smile at Kant in return. For this island of truth -- so charming in it's completeness, is none other than a precious jewel, which crowns a yet greater treasure. The ocean which surrounds it, glittering so brightly by the light of the stars, whispers us to come ever so forward. For while Kant sees it's boundless horizons and endless expanse as a folly, we are not so begrudged ourselves. The dialectical application of pure reason to metaphysics yields infinitude, yes -- but it is the welcome infinitude of a vast and challenging ocean. Look now, the storms are calming. There is a gap in the tempest, the fog-banks have cleared. The ocean beckons us forwards.
+As the moonlight illuminates the on the island's shore, we are reminded once more of the words from our departed guide: \enquote{It is the land of truth, and is surrounded by a vast and stormy ocean}, he echoes. \textcquote[B295]{hackett}{Where illusion properly resides and many fog banks and much fast-melting ice feign new-found lands.} But we only smile at Kant in return. For this island of truth --- so charming in it's completeness, is none other than a precious jewel, which crowns a yet greater treasure. The ocean which surrounds it, glittering so brightly by the light of the stars, whispers us to come ever so forward. For while Kant sees it's boundless horizons and endless expanse as a folly, we are not so begrudged ourselves. The dialectical application of pure reason to metaphysics yields infinitude, yes --- but it is the welcome infinitude of a vast and challenging ocean. Look now, the storms are calming. There is a gap in the tempest, the fog-banks have cleared. The ocean beckons us forwards.
 
 \noindent
 It's time to set sail, into infinity.
