--- a/latex/sections/table-categories.tex
+++ b/latex/sections/table-categories.tex
@@ -14,7 +14,7 @@
       \item Limitation
     \end{itemize}
 
-    \columnbreak
+    \columnbreak{}
     \subsubsection*{Category of Relation}
     \begin{itemize}
       \item Inherence \& Subsistence
@@ -29,6 +29,5 @@
       \item Necessity/Contingency
     \end{itemize}
   \end{multicols}
-  \caption{Kant's Table of Categories}
-  \label{categories}
+  \caption{Kant's Table of Categories}\label{categories}
 \end{figure}
