Create A4-paper variant for export

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -23,7 +23,9 @@ So what do we find, in this new-found, metaphysical science, of the transcendent
   Transcendental aesthetic cannot contain more than these two elements, i.e., space and time. This is evident from the fact that all other concepts belonging to sensibility presuppose something empirical.
 \end{displaycquote}
 
-Now to the untrained gaze of the tourist, it is reasonable for us to ask: \enquote{just how firm are the grounds upon which such mountains protrude?} Unable to tell treacherous marsh from wholesome grassland, it is easy for us to assume that Kant's thesis has become an Idealistic one. For surely, should space and time serve as the synthetic a prioriae which underlie all sensibility --- then all of our worldly intuitions are founded upon a mirage --- some dreamy, subjective precept that is real only within our minds. Troubled by such thoughts, we would have been lost in the bogs of Idealism\footnote{\emph{Idealism}: A metaphysical school of thought in which all reality is founded inseparably from human intuition. Such a view rejects the possibility of a true empirical science.} forever, should we not be rescued by Kant's ready alpenstock\footnote{a shepherd's trekking pole, commonly used to navigate hazardous snowfields and wetlands.}, ever on the watch against Idealism. Space and time are \emph{empirically real}, but \emph{transcendentally ideal}. As the necessary a priori which prerequisites intuition, space and time are both universal to all objects of intuition, regardless of subject (i.e.\ not \emph{subjective}). This is what makes space and time empirically real. Likewise, by not being present in the object (i.e.\ not a property, accident, or attribute) --- but only in the formal nature of our intuition, space and time are \emph{transcendentally ideal}. To use Kant's words in this matter:
+Now to the untrained gaze of the tourist, it is reasonable for us to ask: \enquote{just how firm are the grounds upon which such mountains protrude?} Unable to tell treacherous marsh from wholesome grassland, it is easy for us to assume that Kant's thesis has become an Idealistic one. For surely, should space and time serve as the synthetic a prioriae which underlie all sensibility --- then all of our worldly intuitions are founded upon a mirage --- some dreamy, subjective precept that is real only within our minds. Troubled by such thoughts, we would have been lost in the bogs of Idealism\footnote{\emph{Idealism}: A metaphysical school of thought in which all reality is founded inseparably from human intuition. Such a view rejects the possibility of a true empirical science.} forever, should we not be rescued by Kant's ready alpenstock
+%\footnote{An alpenstock is a shepherd's trekking pole and iceaxe, commonly used to navigate hazardous snowfields and wetlands.}
+, ever on the watch against Idealism. Space and time are \emph{empirically real}, but \emph{transcendentally ideal}. As the necessary a priori which prerequisites intuition, space and time are both universal to all objects of intuition, regardless of subject (i.e.\ not \emph{subjective}). This is what makes space and time empirically real. Likewise, by not being present in the object (i.e.\ not a property, accident, or attribute) --- but only in the formal nature of our intuition, space and time are \emph{transcendentally ideal}. To use Kant's words in this matter:
 
 \begin{displaycquote}[B45]{hackett}
 Hence we assert that space is empirically real (as regards all possible outer experience), despite asserting that space is transcendentally ideal, i.e., that it is nothing as soon as we omit [that space is] the condition of the possibility of all experience and suppose space to be something underlying things in themselves.
@@ -42,6 +44,8 @@ However, such a border is not a destructive one. These constraints of the sensib
 
 \noindent
 It is this very generality, to which Kant takes as the foundation for mathematical intuition. Does it now follow that the universal applicability of mathematics rest in the foundation of these a priori forms behind intuition? Although some may think that the foundation of mathematics is secure now (to which we may close Kant's \emph{Critique} forever), I caution that the mere existence of a priori forms behind intuition is not enough to sufficiently explain mathematical reasoning. For intuition serves only as the means in which we \emph{perceive} (lit.\ intuit) empirical objects, not as a means in which we \emph{understand} them. Mathematics deals not just with the intuitive process of appearances (i.e.\ the appearance of a triangle, that of a derivative), but also a discursive process of seeking the possibility of appearance (i.e.\ the creation of proofs, application of theorems). Such an act of seeking the possibility of appearance relies not merely on the a priori forms behind possible intuition, but also upon certain acts of understanding, which can only be found in the \emph{transcendental logic}. Hence, the transcendental aesthetic by itself is insufficient to explain the universal applicability of mathematics. In order to truly understand the broad utility of mathematical thought, we must turn to Kant's \emph{transcendental logic}, which we will in due course.
+
+\clearpage
 
 Kant's transcendental treatment of aesthetics is a unique thesis, and indeed a marvellous one. It's metaphysical duality: the synthetic a prioriae both empirically real and transcendentally ideal, is a spectacular marriage that bridges the best parts of Materialism\footnote{A philosophical school of thought which rejects metaphysics altogether, basing all knowledge on empirical intuition.} and Idealism, while avoiding the nihilistic excesses of both. Such a treatment on general aesthetic intuition already establishes a foundation to mathematical intuition, which is indeed highly spatial and temporal (think of all the figures of geometry, or the integrals of calculus!). Furthermore, as far as intuition serves for the purpose of cognition (where cognition is the union of sensibility and understanding) --- Kant teases us with one final afterthought, which may prove hauntingly prescient in our age of artificial minds:
 
@@ -99,8 +103,6 @@ This leads us to what is perhaps \emph{the} most thought-provoking idea in Kant'
 
 \noindent
 Our guide goes on to elaborate on the offspring of such a union, which draw their resemblance from space (corresponding to the outer sense) and time (corresponding to the inner sense), in sections entitled \emph{On the Synthesis of Apprehension in Intuition}, and the \emph{On the Synthesis of Reproduction in Imagination}. However these discussions are merely the procedural lemmae of his transcendental analytic, contingent on the synthetic unity of apperception, and we will not elaborate upon them here. Instead we will spend the rest of our time examining the synthetic unity of apperception, this unifying force which marries sensibility and understanding.
-
-\clearpage
 
 \section{The Element of Cognition}
 
